tests/src/test/scala/annotations/neg/macro-annotation-unrecognized-a.check
Test_2.scala:3: error: not found: value CC
  println(CC)
          ^
one error found
